--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@adonisjs/core": "^5.8.6",
     "@adonisjs/lucid": "^10.0.0",
     "@adonisjs/repl": "^3.1.11",
+    "@reduxjs/toolkit": "^1.9.0",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "http-proxy-middleware": "^2.0.6",
@@ -65,6 +66,10 @@
     "node-fetch": "^2.6.1",
     "phc-argon2": "^1.1.3",
     "proxy-addr": "^2.0.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
     "sqlite3": "^5.0.11"
